--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "2.7"
 install: 
-  - python setup.py install
+  - python hfcca.py install
 
 script:
   - python -munittest hfcca
