--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ python:
   - "2.7"
   - "3.3"
 install: 
+install:
+  - pip install -e . --use-mirrors
+  - pip install -r dev_requirements.txt --use-mirrors
   - python setup.py install
 
 script:
