--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ python:
   - "3.5"
 
 install:
-  - pip install lizard
-
+  - python setup.py install
 before_script:
   - mkdir ./projects/
   - (cd projects && git clone https://github.com/andrewrk/zig.git)
