--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: python
+
 python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
-install: 
+  - 2.7
+  - 3.3
+  - 3.4
+  - 3.5
+  - pypy
+  - pypy3
+
 install:
   - pip install -e .
   - pip install -r dev_requirements.txt
@@ -11,4 +15,3 @@ install:
 
 script:
   - make
-
