Enable OS X build on Travis-CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,13 @@ python:
   - pypy
   - pypy3
 
+os: linux
+
+matrix:
+  include:
+    - os: osx
+      language: generic
+
 install:
   - pip install -e .
   - pip install -r dev_requirements.txt
