--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 install:
   - pip install -e .
   - pip install -r dev_requirements.txt
-  - python setup.py install
+  - python setup.py build install
 
 script:
   - make
