--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,5 @@ python:
 
 os: linux
 
-install:
-  - pip install -e .
-  - pip install -r dev_requirements.txt
-  - python setup.py build install
-
 script:
-  - make
+  - build.sh
