Revert "Reverting to a build that almost worked for all versions"
This reverts commit 3d14e7a2ce5791995deed809642c7e2fa494b5b3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ python:
 
 os: linux
 
+virtualenv:
+  system_site_packages: true
+
 install:
   - pip install -e .
   - pip install -r dev_requirements.txt
