Revert "Merging current build with the config of Build #2"
This reverts commit 6f20d28e8033baf9962c55f47c31c5bb388a4af5.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,8 @@ virtualenv:
   system_site_packages: true
 
 install:
-  - pip install -e .
   - pip install -r dev_requirements.txt
-  - python setup.py build install
   - pip install .
 
 script:
-  - pip freeze
-  - make
+  - bash ./build.sh
