Revert "Using the right requirements file."
This reverts commit d510a76ed6f114ae0b5212f0056c217be36a459a.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ virtualenv:
   system_site_packages: true
 
 install:
-  - pip install -r dev_requirements.txt
+  - pip install -r requirements
   - pip install .
 
 script:
