Revert "Moving from make to a build script"
This reverts commit 484f6406e466f8c2765381cc52ddd6becb8d1604.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,10 @@ python:
 
 os: linux
 
+install:
+  - pip install -e .
+  - pip install -r dev_requirements.txt
+  - python setup.py build install
+
 script:
-  - build.sh
+  - make
